# fibermat

./: .gitignore  LICENSE  README.md  environment.yml  gitignore  jupyter-notebook.ipynb  main.py  make  pyproject.toml  readthedocs.yaml  release-workflow.md  requirements.txt  setup.cfg  widgets.py
.github/workflows/: documentation.yml  gh-pages.yml
doc/: FiberMat.rst  conf.py  index.rst
doc/api/: interpolation.rst  mat.rst  mesh.rst  net.rst  solver.rst  widgets.rst
docs/: Tutorial.rst  conf.py  index.rst  requirements.txt
docs/api/: interpolation.rst  mat.rst  mesh.rst  model.rst  net.rst  render.rst  solver.rst  widgets.rst
fibermat/: __init__.py  interpolation.py  mat.py  mesh.py  model.py  net.py  render.py  solver.py
scripts/: logo.py  square.py
scripts/outputs/: banner.pvsm
src/fibermat/: __init__.py  interpolation.py  mat.py  mesh.py  model.py  net.py  render.py  solver.py  widgets.py
test/: test_mat.py  test_mesh.py  test_net.py
