[metadata]
name = fibermat
version = 1.0.6
author = François Mahé
author_email = francois.mahe@ens-rennes.fr
description = A mechanical solver to simulate fiber packing and perform statistical analysis.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fmahe/fibermat
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.11
install_requires =
    matplotlib
    numpy
    pandas
    pyvista
    scipy
    scikit-learn
    tqdm
